<?xml version="1.0"?>
<package format="2">
	<name>tigrillo_io</name>
	<version>2.0.0</version>
	<description>Sensors dameons for the Tigrillo Robot</description>

	<maintainer email="gabriel.urbain@ugent.be">Gabriel Urbain</maintainer>
	<license>MIT</license>
	<url type="website">https://gabs48.github.io/</url>
	<author email="gabriel.urbain@ugent.be">Gabriel Urbain</author>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>message_generation</build_depend>

	<exec_depend>rospy</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>std_msgs</depend>
    <build_export_depend>message_runtime</build_export_depend>
    <depend>actionlib_msgs</depend>

</package>